--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,5 +4,5 @@
 {% include meta.html %}
 
 <link rel="alternate" type="application/rss+xml" title="{{ site.meta.title }}" href="{{ site.url }}/atom.xml">
-<link href='{{ base }}assets/style.css?t={{ site.time | date: "%Y%m%d%H%M%S" }}' rel='stylesheet'>
+<link href='{{ base }}assets/style.css?t={{ timestamp }}' rel='stylesheet'>
 
