--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class='{{ page.html_class }}' lang='en'>
+<html class='no-js {{ page.html_class }}' lang='en'>
 <head>
 {% include meta.html %}
 
