--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,7 @@
 <html class='no-js {{ page.html_class }}' lang='en'>
 <head>
 {% include meta.html %}
+{% include polyfills.html %}
 
 <link rel="alternate" type="application/rss+xml" title="{{ site.meta.title }}" href="{{ site.url }}/atom.xml">
 <link href='{{ base }}assets/style.css?t={{ timestamp }}' rel='stylesheet'>
