--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html class='no-js {{ page.html_class }}' lang='en'>
 <head>
+{% include base.html %}
 {% include meta.html %}
 {% include polyfills.html %}
 
