Fix reference to style.css

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,6 @@
 {% include base.html %}
 {% include meta.html %}
 {% include polyfills.html %}
-
 <link rel="alternate" type="application/rss+xml" title="{{ site.meta.title }}" href="{{ site.url }}/atom.xml">
-<link href='{{ base }}assets/style.css?t={{ timestamp }}' rel='stylesheet'>
+<link href='{{ base }}/assets/style.css?t={{ timestamp }}' rel='stylesheet'>
 
